GENERATION AND SMOOTHING WORKING PROPERLY! Two small mistakes, each mistake damaging one big area, both fixed in about a minute. To do: memory problems (depending on resolution), grouping, region dividing, countries, scrolling etc... That's just the beginning of a wonderful port!
Signed-off-by: Dirakon <609700zxc@mail.ru>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,15 @@ xmlns:tools="http://schemas.android.com/tools">
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="124dp"
+            android:layout_height="0dp"
+            android:text="Button"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/myDrawer"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -28,13 +37,5 @@ xmlns:tools="http://schemas.android.com/tools">
         android:layout_height="match_parent"
         android:clickable="false">
         <!--  Place the objects you want on the top here -->
-        <Button
-            android:id="@+id/button"
-            android:layout_width="124dp"
-            android:layout_height="66dp"
-            android:text="Button"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
