--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,27 +15,37 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="124dp"
-            android:layout_height="0dp"
-            android:text="Button"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/myDrawer"
-            app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="false"
+            tools:layout_editor_absoluteX="-6dp"
+            tools:layout_editor_absoluteY="-1dp">
+            <!--  Place the objects you want on the top here -->
+
+            <Button
+                android:id="@+id/generateButton"
+                android:layout_width="124dp"
+                android:layout_height="0dp"
+                android:text="Generate!"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:id="@+id/changeMapModeButton"
+                android:layout_width="162dp"
+                android:layout_height="48dp"
+                android:text="Change mapmode"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/generateButton" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="false">
-        <!--  Place the objects you want on the top here -->
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
